# ar4_practice

./: CMakeLists.txt  Dockerfile  Joint1.csv  Joint2.csv  Joint3.csv  Joint4.csv  Joint5.csv  Joint6.csv  Joint7.csv  Joint8.csv  README.md  boundary_samples.csv  boundary_samples4.csv  boundary_samples5.csv  boundary_samples6.csv  boundary_samples9.csv  calibrationData.csv  launchCalibrationPhysical.sh  launchCalibrationVirtual.sh  package.xml  results.csv  results0_2.csv  results11.csv  results12.csv  results13.csv  results3.csv  results4.csv  results5.csv  results6.csv  results8.csv  results9.csv  simulator_state_iter_0.pkl  videoGeneration.csv  workEnvelope.stl
docs/: calibration_math.aux  calibration_math.out  calibration_math.tex
launch/: ar4_commander_node.launch.py  ar4_moveit.launch.py  joint_commander.launch.py
miscData/: FullForwardKinematics.csv  P4Q12Trial2.csv  P4Q12Trial4.csv  boundary_samples1.csv  boundary_samples2.csv  boundary_samples3.csv  boundary_samples7.csv  boundary_samples8.csv  d415iCalibrationParameters  faces_correct.csv  physical_calibration_data_long.csv  physical_calibration_data_reasonable.csv  results10.csv  results7.csv  verifyFKPoints.csv
scripts/: GetPose.srv  ar4_robot.py  ar4_robot_py.py  arucoCalibration.py  arucoSensor.py  arucoTesting.py  aruco_data_receiver.py  calibrationConvergenceSimulation.py  calibrationPhysical.py  calibrationSimulation.py  calibrationVisualSimulation copy.py  calibrationVisualSimulation.py  cameraPointing.py  charuco.py  commands.txt  dialIndicatorData.txt  dial_indicator_data_20251119_155428.csv  (+36 more)
(+37 files in other folders)
