<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar4_practice</name>
  <version>0.0.1</version>
  <description>Python package for AR4 robot joint control</description>
  <maintainer email="koghalai@gmail.com">koghalai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
<!--  <buildtool_depend>rosidl_default_generators</buildtool_depend> 
  <member_of_group>rosidl_interface_packages</member_of_group> -->  

  
  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>pymoveit2</depend>
  <depend>annin_ar4_moveit_config</depend>
  <depend>tf_transformations</depend>
  <depend>geometry_msgs</depend>


  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>